--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
-<html lang="">
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="dark">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SwiftF0</title>
   </head>
   <body>
